projekt panel -> overflow fixed, shadow ist nicht mehr sichtbar

--- a/bin/QUI/controls/projects/project/Panel.css
+++ b/bin/QUI/controls/projects/project/Panel.css
@@ -13,23 +13,24 @@
     bottom: 2px;
     left: 0;
     width: 100%;
-    height : 40px;
+    height: 40px;
     border-top: 1px solid #DEDEDE;
     z-index: 11;
 }
 
 .project-content,
 .project-list {
-    position   : absolute;
-    top        : 0;
-    width      : 100%;
-    height     : 100%;
-    background : #FFF;
-    z-index    : 10;
+    background: #FFF;
+    height: 100%;
+    overflow: auto;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 10;
 }
 
 .project-content {
-    z-index : 5;
+    z-index: 5;
 }
 
 .project-list .qui-sitemap-entry-icon img {
